client/src/App.css
html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}article,aside,footer,header,nav,section{display:block}h1{font-size:2em;margin:.67em 0}figcaption,figure,main{display:block}figure{margin:1em 40px}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent;-webkit-text-decoration-skip:objects}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:inherit}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}dfn{font-style:italic}mark{background-color:#ff0;color:#000}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}audio,video{display:inline-block}audio:not([controls]){display:none;height:0}img{border-style:none}svg:not(:root){overflow:hidden}button,input,optgroup,select,textarea{font-family:sans-serif;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}button,html [type=button],[type=reset],[type=submit]{-webkit-appearance:button}button::-moz-focus-inner,[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner{border-style:none;padding:0}button:-moz-focusring,[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{display:inline-block;vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-cancel-button,[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details,menu{display:block}summary{display:list-item}canvas{display:inline-block}template{display:none}[hidden]{display:none}

* { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }

.clearfix:after {visibility: hidden; display: block; font-size: 0; content: ''; clear: both; height: 0; }

.sr-only { position: absolute; width: 1px; height: 1px; margin: -1px; border: 0; padding: 0; white-space: nowrap; clip-path: inset(100%); clip: rect(0 0 0 0); overflow: hidden;}

/* variables */

:root {
  --priBlack: #1a1a1a;
  --priWhite: rgba(255, 255, 255, 0.87);
  --priBlue: rgb(120, 120, 255);
}


html {
  font-family: Arial, Helvetica, sans-serif;
  font-size: 16px;
  background-color: var(--priBlack);
  color: var(--priWhite);
  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;
}

.App {
  height: 100vh;
  width: 100vw;
}

body {
  margin: 0;
  padding: 0;
}

.wrapper {
  max-width: 1400px;
  width: 90%;
  margin: auto;
}

p {
  padding: 0;
  margin: 0;
}

a {
  color: var(--priBlue);
  font-weight: 500;
  text-decoration: none;
}

button {
  border-radius: 4px;
  border: 1px solid transparent;
  padding: 0.9rem;
  font-size: 0.85rem;
  font-weight: 700;
  letter-spacing: 0.15rem;
  font-family: inherit;
  background-color: var(--priBlue);
  color: var(--priWhite);
  cursor: pointer;
  transition: border-color 0.25s;
  text-transform: uppercase;
}

.buttonInversed {
  background-color: var(--priBlack);
  border: 1px solid var(--priBlue);
  font-weight: 400;
}

/* Disabled styles */
.buttonDisabled {
  background-color: rgba(120, 120, 255, 0.279);
  color: rgba(255, 255, 255, 0.511);
  cursor: not-allowed;
}

/* Enabled styles */
.buttonEnabled {
  background-color: rgb(120, 120, 255);
  color: rgba(255, 255, 255, 0.87);
  cursor: pointer;
}

/* landing  */

header {
  height: 8vh;
  display: flex;
}

nav {
  display: flex;
  justify-content: space-between;
}

.landingCtn, .dashboardCtn {
  height: 85vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.landingText {
  text-align: center;
  margin-bottom: 2rem;
}

footer {
  height: 7vh;
  font-size: 0.7rem;
  text-align: right;
}

/* dashboard */

.welcomeCtn {
  display: flex;
  align-items: center;
  color: grey;
}

.welcomeCtn p {
  margin-left: 0.5rem;
  font-size: 0.9rem;
}

.faUserCtn {
  padding: 1rem;
  border-radius: 50%;
  background-color: black;
}

.dashNavRight {
  width: 500px;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

/* search */

.searchWrapper input {
  margin-right: 0.2rem;
  width: 300px;
}

/* reg/login forms */

.formContainer {
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}

form {
  width: 465px;
  padding: 1rem 2rem 3rem 2rem; 
  background-color: rgb(20, 20, 20);
  border-radius: 10px;
}

form h1 {
  margin-bottom: 2rem;
}

form input {
  width: 100%;
  height: 3.75rem;
  padding: 0 0.5rem;
  background-color: rgb(44, 44, 44);
  border-radius: 4px;
  border: 1px solid transparent;
  margin-bottom: 1.5rem;
  color: var(--priWhite);
}

input::placeholder {
  color: rgb(161, 161, 161);
}

.passwordInputCtn {
  display: flex;
  height: 100%;
}

.passwordInputCtn input {
  border-radius: 4px 0 0 4px;
}

form button {
  width: 100%;
  border-radius: 4px;
  padding: 1.25rem 0;
  margin: 1rem 0 2rem 0;
}

form p {
  font-size: 0.8rem;
  text-align: center;
  font-weight: 400;
  margin-bottom: 0.5rem;
}

.eyeIcon {
  color: var(--priWhite);
  padding: 1.375rem;
  background-color: rgb(44, 44, 44);
  border-radius: 0 4px 4px 0;
}

